Changed data source. It works now. :)

--- a/css/main.css
+++ b/css/main.css
@@ -61,16 +61,13 @@ html, body  {
     justify-content: center;
     flex-direction: column;
 }
-.EnterLocationWrapper    {
-    text-align: center;
-    background: #ffffff;
-}
 .EnterLocation    {
     font-size: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 20px;
+    background: #fff;
 }
 .InputStatus    {
     font-size: 30px;
