--- a/css/main.css
+++ b/css/main.css
@@ -86,10 +86,11 @@ html, body  {
     border-left: 1px solid #000;
     padding: 5px;
 }
-.location-icon    {
+.location-icon, .location-icon:hover, .location-icon:active, .location-icon:visited    {
     padding: 0;
     margin: 0;
     height: 100%;
+    color: #000;
 }
 .GetWeatherBtn    {
     text-align: center;
@@ -104,4 +105,26 @@ html, body  {
 }
 .WeatherScreen    {
     display: none;
+}
+.WSNavbar   {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    background: #fff;
+    font-family: 'open sans', sans-serif;
+}
+.Brand  {
+    margin: 0;
+    border-right: 2px solid #000;
+    padding: 10px;
+    font-size: 30px;
+    display: flex;
+    align-items: center;
+}
+.WSEnterLocation    {
+    font-size: 17px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 10px;
 }
