--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     border: 0;
-    font-size: 100%;
     background: transparent;
 }
 html, body  {
@@ -39,7 +38,6 @@ html, body  {
     transition: 1.5s;
 }
 .navBar {
-    transition: 1s;
     text-align: center;
     background-color: #fff;
     padding: 20px;
@@ -52,6 +50,7 @@ html, body  {
     font-size: 50px;
     font-family: 'open sans', sans-serif;
     letter-spacing: 4px;
+    transition-delay: 0.5s;
 }
 .FrontLandingWrapper    {
     width: 100%;
@@ -86,25 +85,33 @@ html, body  {
     border-left: 1px solid #000;
     padding: 5px;
 }
-.location-icon, .location-icon:hover, .location-icon:active, .location-icon:visited    {
+.location-icon, .location-icon:active, .location-icon:visited    {
     padding: 0;
     margin: 0;
     height: 100%;
     color: #000;
+    transition: 1s;
+}
+.location-icon:hover   {
+    color: #000;
+    text-shadow: 2px 2px grey;
 }
 .GetWeatherBtn    {
     text-align: center;
     text-decoration: none;
     font-family: 'open sans', sans-serif;
     border: 2px solid #000;
-    background: rgba(0, 0, 0, 0.5);
-    color: #fff;
+    color: #000;
     margin: 10px;
     padding: 15px;
     letter-spacing: 2px;
 }
+.GetWeatherBtn:hover    {
+    transition: 0.4s ease;
+    background: #000;
+    color: #fff;
+}
 .WeatherScreen    {
-    display: none;
 }
 .WSNavbar   {
     display: flex;
@@ -127,4 +134,17 @@ html, body  {
     align-items: center;
     justify-content: flex-start;
     padding: 10px;
+}
+@media (min-width: 950px) {
+    .WSLocationInputText    {
+        font-size: 40px;
+    }
+    .CurrentLocation    {
+        display: none;
+    }
+}
+@media (min-width: 720px)    {
+    .WSLocationInputText    {
+        font-size: 30px;
+    }
 }
