--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ html, body  {
 #root    {
     width: 100%;
     height: 100%;
-    background: rgb(100, 100, 100)
+    background: #248883;
 }
 /*
 ::-webkit-input-placeholder {
@@ -112,8 +112,10 @@ html, body  {
     color: #fff;
 }
 .WeatherScreen    {
+    /*background: #024883;*/
 }
 .WSNavbar   {
+    height: 85px;
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -123,7 +125,7 @@ html, body  {
 .Brand  {
     margin: 0;
     border-right: 2px solid #000;
-    padding: 10px;
+    padding: 6px;
     font-size: 30px;
     display: flex;
     align-items: center;
@@ -133,14 +135,27 @@ html, body  {
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    padding: 10px;
+    padding: 6px;
+}
+.WSLocationInputTextWrapper {
+    display: inline-block;
+    border: 1px solid #000;
+}
+.WSWrapper    {
+    width: 100%;
+    height: 85vh;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+}
+.CurrentWeather    {
+    text-align: center;
+    display: flex;
+    justify-content: center;
 }
 @media (min-width: 950px) {
     .WSLocationInputText    {
         font-size: 40px;
-    }
-    .CurrentLocation    {
-        display: none;
     }
 }
 @media (min-width: 720px)    {
