--- a/css/main.css
+++ b/css/main.css
@@ -11,12 +11,11 @@ html, body  {
     margin: 0;
     padding: 0;
 }
-#root    {
+.root    {
     width: 100%;
     height: 100%;
     background: #248883;
 }
-/*
 ::-webkit-input-placeholder {
     color: white;
 }
@@ -28,138 +27,102 @@ html, body  {
 }
 :-ms-input-placeholder  {
     color: white;
-}*/
-.spinnerBlock   {
-    text-align: center;
-    font-family: 'open sans', sans-serif;
-    font-size: 40px;
-    margin: 40px;
-    display: none;
-    transition: 1.5s;
 }
-.navBar {
-    text-align: center;
-    background-color: #fff;
-    padding: 20px;
+.Navbar    {
+    background-color: #429583;
+    color: #fff;
+    font-family: 'open sans', sans-serif;
+    height: 50px;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 }
-.header {
-    margin: 0;
-    font-size: 50px;
-    font-family: 'open sans', sans-serif;
-    letter-spacing: 4px;
-    transition-delay: 0.5s;
+.Header    {
+    padding: 3px;
+    text-align: center;
+    margin: 3px;
+    margin-left: 10px;
+    font-size: 25px;
+    letter-spacing: 3px;
 }
-.FrontLandingWrapper    {
-    width: 100%;
-    height: 80vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
-.EnterLocation    {
+.TemperatureUnit    {
+    padding: 4px;
+    text-align: center;
+    margin: 4px;
     font-size: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 20px;
-    background: #fff;
+    letter-spacing: 1px;
 }
-.LocationInput   {
-    font-family: 'open sans', sans-serif;
-}
-.LocationInputTextWrapper    {
-    display: inline-block;
-    border: 1px solid #000;
-}
-.LocationInputText    {
-    font-size: 40px;
+.TemperatureUnitSelect    {
+    border: 1px solid #fff;
+    background: #7DADA1;
+    color: #fff;
+    font-size: 16px;
+    width: 60px;
     padding: 2px;
 }
-.GetLocationBtn    {
-    display: inline-block;
-    margin: 5px;
-    border-left: 1px solid #000;
-    padding: 5px;
+.LocationInput    {
+    margin: 4px;
+    padding: 2px;
+    font-size: 20px;
 }
-.location-icon, .location-icon:active, .location-icon:visited    {
-    padding: 0;
-    margin: 0;
-    height: 100%;
-    color: #000;
+.LocationInputWrapper    {
+    display: flex;
+    align-items: center;
+    background: #7DADA1;
+    color: #fff;
+    padding: 2px;
+}
+.SearchIcon    {
+    margin: 2px;
+}
+.AddressInput    {
+    font-size: 17px;
+    padding: 2px;
+    margin: 3px;
+}
+.getGeolocationIconWrapper, getGeolocationIconWrapper:active, getGeolocationIconWrapper:visited    {
+    text-decoration: none;
+    color: #fff;
     transition: 1s;
 }
-.location-icon:hover   {
-    color: #000;
+.getGeolocationIconWrapper:hover    {
     text-shadow: 2px 2px grey;
 }
-.GetWeatherBtn    {
-    text-align: center;
-    text-decoration: none;
-    font-family: 'open sans', sans-serif;
-    border: 2px solid #000;
-    color: #000;
-    margin: 10px;
-    padding: 15px;
-    letter-spacing: 2px;
-}
-.GetWeatherBtn:hover    {
-    transition: 0.4s ease;
-    background: #000;
-    color: #fff;
+.getGeolocationIcon    {
+    font-size: 15px;
 }
 .WeatherScreen    {
-    /*background: #024883;*/
-}
-.WSNavbar   {
-    height: 85px;
     display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    background: #fff;
     font-family: 'open sans', sans-serif;
-}
-.Brand  {
-    margin: 0;
-    border-right: 2px solid #000;
-    padding: 6px;
-    font-size: 30px;
-    display: flex;
-    align-items: center;
-}
-.WSEnterLocation    {
-    font-size: 17px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    padding: 6px;
-}
-.WSLocationInputTextWrapper {
-    display: inline-block;
-    border: 1px solid #000;
-}
-.WSWrapper    {
-    width: 100%;
-    height: 85vh;
-    display: flex;
-    justify-content: center;
+    padding: 10px;
     flex-direction: row;
+    justify-content: center;
+    width: 100%;
 }
 .CurrentWeather    {
-    text-align: center;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin: 10px;
 }
-@media (min-width: 950px) {
-    .WSLocationInputText    {
-        font-size: 40px;
-    }
+.LocationInfo    {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 10px;
+    height: 100%;
 }
-@media (min-width: 720px)    {
-    .WSLocationInputText    {
-        font-size: 30px;
-    }
+.CityStateCountry   {
+    font-size: 35px;
+    margin: 2px;
+}
+.UpdateTime    {
+    margin: 2px;
+    font-size: 15px;
+}
+.Timezone    {
+    margin: 2px;
+}
+.Offset    {
+    margin: 2px;
 }
