--- a/css/main.css
+++ b/css/main.css
@@ -101,7 +101,7 @@ html, body  {
     display: flex;
     font-family: 'open sans', sans-serif;
     padding: 10px;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
 }
 .CurrentWeather    {
@@ -109,6 +109,7 @@ html, body  {
     flex-direction: column;
     align-items: center;
     margin: 10px;
+    border: 2px solid #000;
 }
 .LocationInfo    {
     padding: 3px;
@@ -171,9 +172,33 @@ html, body  {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     font-size: 20px;
 }
 .CWRowElement    {
     font-size: 17px;
     padding: 4px;
+}
+.DailyWeather    {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid #000;
+}
+.DailyWeatherHeader    {
+    border: 2px solid #000;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.DWHeader    {
+    border: 2px solid #000;
+    font-size: 30px;
+    margin: 5px;
+}
+.DWSummary    {
+    border: 2px solid #000;
+    font-size: 20px;
+    margin: 10px;
 }
