--- a/css/main.css
+++ b/css/main.css
@@ -109,7 +109,6 @@ html, body  {
     flex-direction: column;
     align-items: center;
     margin: 10px;
-    border: 2px solid #000;
 }
 .LocationInfo    {
     padding: 3px;
@@ -184,42 +183,131 @@ html, body  {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 2px solid #000;
 }
 .DailyWeatherHeader    {
-    border: 2px solid #000;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 .DWHeader    {
-    border: 2px solid #000;
     font-size: 30px;
     margin: 5px;
 }
 .DWSummary    {
-    border: 2px solid #000;
     font-size: 20px;
     margin: 10px;
 }
-.DailyWeatherList    {
+.DailyWeatherListWrapper    {
     margin: 5px;
+}
+.DailyWeatherList    {
+    padding: 10px;
     display: flex;
     justify-content: center;
     list-style-type: none;
     flex-direction: column;
-    border: 2px solid #000;
 }
 .DWListElement    {
     width: 100%;
-    padding: 5px;
+    padding: 3px;
     background: #4f9988;
     color: #000;
-    border: 1px solid #000;
+    cursor: pointer;
+}
+.SummarisedInfo    {
     display: flex;
-    align-items: center;
+    align-items: baseline;
     justify-content: flex-start;
 }
+.DayDate    {
+    font-size: 20px;
+}
 .DWListElementIcon    {
+    margin-top: auto;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-bottom: auto;
+}
+.DWMaxTemp    {
+    margin: 3px;
+    font-size: 27px;
+}
+.DWMinTemp    {
+    color: rgba(0, 0, 0, 0.7);
+    margin: 3px;
+    font-size: 18px;
+}
+.ExpandedInfo    {
+    display: none;
+}
+.DWEIContentWrapper    {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.DWTemperatureWrapper    {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.DWTemperature    {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+    justify-content: center;
+}
+.DWEIMaxTemp    {
+    font-size: 60px;
+    letter-spacing: 3px;
+    margin: 10px;
+}
+.DWEIMinTemp    {
+    font-size: 40px;
+    color: grey;
     margin: 5px;
+}
+.DWSun    {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.DWSunrise    {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+    border-right: 1px solid #000;
+}
+.DWSunset    {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+    padding: 5px;
+}
+.DWPropDials    {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: 15px;
+    padding: 10px;
+}
+.DWPropDial    {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border-right: 1px solid #000;
+    padding: 20px;
+}
+.DWWindDial    {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
 }
